# ink

./: .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: PORTFOLIO-DISPOSITION.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_settings.sql  003_custom_types.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  mod.rs  ollama.rs
src/components/: AnnotationCard.tsx  AnnotationHistory.tsx  AnnotationOverlay.tsx  EditorPane.tsx  SearchPanel.tsx  SettingsPanel.tsx  StatsDashboard.tsx  StatusBar.tsx  WorkspaceSidebar.tsx
src/hooks/: use-annotations.ts  use-editor.ts  use-ollama.ts  use-settings.ts  use-workspace.ts
src/lib/: annotation-positioner.ts  db.ts  prompt-templates.ts  text-utils.ts  type-registry.ts
src/types/: index.ts
